Bug 1259810 - check that D2D1 device creation succeeds and otherwise fall to software backend. r=bas.schouten